--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{lscape}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{cite}
 
 
 \degree{Doctor of Philosophy}
@@ -80,6 +81,7 @@ The author gratefully acknowledges funding by the National Institutes of Health,
 %% This adds a line for the Bibliography in the Table of Contents.
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{unsrt}
+{\small
 \bibliography{thesis}
-
+}
 \end{document}
